--- a/View/adoteGato.html
+++ b/View/adoteGato.html
@@ -12,7 +12,6 @@
 
     <link rel="stylesheet" href="../Assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Assets/Css/adoteGato.css">
-    <link rel="stylesheet" href="../Assets/Js/adoteGato.js">
 
 
   </head>
@@ -147,7 +146,7 @@
 
             <div class="col-lg-4 col-sm-6 portfolio-item" >
                 <div class="card h-100">
-                    <img class="card-img-top" src="../Assets/Img/cat4.jpg" alt="" style="">
+                    <img class="card-img-top" src="../Assets/Img/cat4.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title" style="margin-top: 50px;">
                             <h4 style="color:lightsalmon">Âmbar e caramelo</h4>
